@@ -1,3 +1,10 @@
+Fri Feb 21 10:39:33 2014  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>
+
+	*  test/monitor/test_monitor.rb: remove unused variabels.
+	*  test/resolv/test_dns.rb: ditto.
+	*  test/rexml/test_functions.rb: ditto.
+	*  test/rss/test_setup_maker_itunes.rb: ditto.
+
 Fri Feb 21 09:48:56 2014  Eric Wong  <e@80x24.org>
 
 	* ext/socket/ancdata.c (bsock_sendmsg_internal): only retry on error
